--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,21 @@
+certifi==2018.10.15
+chardet==3.0.4
 coverage==4.5.1
 dj-database-url==0.5.0
-Django==2.0
+Django==2.1.3
 django-bootstrap-modal-forms==1.3.1
 django-debug-toolbar==1.10.1
 django-nose==1.4.5
 django-widget-tweaks==1.4.3
 djangoajax==3.0.3
 gunicorn==19.9.0
+idna==2.7
 nose==1.3.7
 psycopg2==2.7.5
 psycopg2-binary==2.7.5
 pytz==2018.5
 requests==2.20.0
+sentry-sdk==0.5.5
 sqlparse==0.2.4
+urllib3==1.24.1
 whitenoise==4.1
